# electronics

./: LICENSE  README.md
blinky/: .gitignore  CHANGELOG  CMakeLists.txt  config.cmake.release  link.ld  release.sh  user_settings.c
blinky/cmake/: version.cmake
blinky/src/: app.c  app_cli.h  board_specific_config.h  breathing.c  global_settings.h  log.c  main.c  parse_utils.c  parse_utils.h  pi_communication.c  pi_communication.h  self_test.h  settings.h  stats.c  strtof_noheap.c  strtof_noheap.h  version.c  watchdog.c  watchdog.h
blinky/src/actuators/: PWM.c  control_signals.h  i2c_dac.c
blinky/src/board_config/: board_config_v0.c  board_config_v0.h  board_config_v1.c  board_config_v1.h
blinky/src/crc/: crc.h  crc16.c  crc32.c  crc8.c
blinky/src/sensors/: ADC.h  MPRLS_pressure.c  UPS_status.c  UPS_status.h  calculated.c  calculated.h  flow.h  sensors.c  sensors.h
blinky/src/usb/: app_usb.h
blinky/tests/: CMakeLists.txt  config.cmake.example  crc.test.c  dependencies.cmake  flow.test.c
communication_test/: CMakeLists.txt
communication_test/python/: Pipfile  mcu_communication.py  settings.py
communication_test/src/: board.c  main.c  pi_communication.h  settings.h
firmware/: CMakeLists.txt  README.md  config.cmake.example  link.ld  user_settings.c
firmware/cmake/: toolchain-gcc-arm-embedded.cmake
firmware/src/: app.c  app.h  app_cli.c  board.c  board.h  board_ADC_ID.h  board_GPIO_ID.h  board_specific_config.c  board_specific_config.h  breathing.c  breathing.h  cli.c  cli.h  clock.c  clock.h  eeprom.c  fat_fs_emulation.c  fat_fs_emulation.h  global_settings.h  i2c.c  i2c.h  log.c  log.h  main.c  parse_utils.c  parse_utils.h  pi_communication.c  pi_communication.h  power_management.c  power_management.h  self_test.c  settings.c  settings.h  stats.h  system_status.c  system_status.h  version.h  watchdog.c
firmware/src/RGB_LED/: LED_api.c  LED_api.h  RGB_LED.h
firmware/src/actuators/: DPR.c  DPR.h  PWM.c  PWM.h  control_signals.c  control_signals.h  i2c_dac.c  i2c_dac.h
firmware/src/board_config/: board_ADC_ID.h  board_GPIO_ID.h  board_config_v0.c  board_config_v1.c
firmware/src/crc/: crc7.c
firmware/src/log_storage/: SPI_flash.c  SPI_flash.h  log_storage.c  log_storage.h  storage_strategy.xlsx
firmware/src/sensors/: ADC.c  ADC.h  MPRLS_pressure.c  MPRLS_pressure.h  MPRL_pressure.c  MPRL_pressure.h  button.c  button.h  calculated.c  calculated.h  flow.c  flow.h  sensors.c  sensors.h  thermistor.c  thermistor.h
firmware/src/storage/: eeprom.c  eeprom.h  storage.c  storage.h
firmware/src/usb/: app_usb.c  app_usbd_cfg.h  cdc_desc.c  cdc_vcom.c  cdc_vcom.h  composite_desc.c  msc_mem.c
firmware/tests/: CMakeLists.txt
pcb/7001-mainboard/: .gitignore  7001-ventilator_mainboard-cache.lib  7001-ventilator_mainboard.kicad_pcb  7001-ventilator_mainboard.pro  7001-ventilator_mainboard.sch  7001-ventilator_mainboard.sch-bak  7001-ventilator_mainboard.xlsx  fp-info-cache  fp-lib-table  pressure_sensor.sch
pcb/7001-mainboard/bom/: ibom.html
pcb/7001-mainboard/gerber__7001-pcb-2/: 7001-ventilator_mainboard-B_Cu.gbr  7001-ventilator_mainboard-B_Fab.gbr  7001-ventilator_mainboard-B_Mask.gbr  7001-ventilator_mainboard-B_Paste.gbr  7001-ventilator_mainboard-B_SilkS.gbr  7001-ventilator_mainboard-Edge_Cuts.gbr  7001-ventilator_mainboard-F_Cu.gbr  7001-ventilator_mainboard-F_Fab.gbr  7001-ventilator_mainboard-F_Mask.gbr  7001-ventilator_mainboard-F_Paste.gbr  7001-ventilator_mainboard-F_SilkS.gbr  7001-ventilator_mainboard-NPTH.drl  7001-ventilator_mainboard-PTH.drl
pcb/OperationAir.pretty/: OperationAir260.kicad_mod
